fixed a scrollbar style

--- a/style.css
+++ b/style.css
@@ -772,3 +772,16 @@ color: rgb(0, 110, 129);
     text-align: center;
     margin-bottom: 5%;
 }
+
+
+.chat-nav::-webkit-scrollbar {
+    width: 5px;               /* width of the entire scrollbar */
+  }
+  .chat-nav::-webkit-scrollbar-track {
+    background:transparent;        /* color of the tracking area */
+  }
+  .chat-nav::-webkit-scrollbar-thumb {
+    background-color: rgb(110, 110, 110);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid rgb(110, 110, 110);  /* creates padding around scroll thumb */
+  }
